--- a/project.html
+++ b/project.html
@@ -1,11 +1,135 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebLayout</title>
+
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <nav>
+      <img src="image and video/new-logo-black.webp" alt="Logo" />
+      <button class="home-button" onclick="scrollToTop()">Home</button>
+      <a class="menu-button" href="test.html" target="_blank">Menu</a>
+      <button class="order-button" onclick="goTOweb()">
+        <b>Order Online</b>
+      </button>
+    </nav>
+    <div class="section">
+      <div
+        class="title"
+        style="text-align: left; color: red; transform: translateX(-30%)"
+      >
+        <p
+          class="text-1"
+          style="
+            font-size: 4vw;
+            font-weight: 600;
+            transform: scaleY(1.3) scaleX(1.1) translateX(3%) translateY(20%);
+          "
+        >
+          I'm Addicted.<br />
+        </p>
+        <p
+          class="text-2"
+          style="
+            font-weight: 600;
+            font-size: 3vw;
+            transform: scaleY(0.8) scaleX(0.7) translateY(-140%)
+              translateX(-25%);
+          "
+        >
+          Authentic Korean Flavors.
+        </p>
+        <button class="order-butt" onclick="goTOweb()">Order Online</button>
+      </div>
+      <video
+        src="image and video/file.mp4"
+        id="name"
+        autoplay
+        muted
+        loop
+        style="margin-top: 10%"
+      ></video>
+    </div>
+    <section class="details">
+      <div class="flex-container">
+        <div class="flex-item">
+          <br /><br />
+          <img src="image and video/new-logo-black.webp" alt="Logo" />
+          <br />
+          <h6 class="scale-text">ORDER ON THE GO</h6>
+          <br />
+          <p class="small-text">
+            Our online ordering system makes it easy to order your favorite
+            dishes on the go. With just a few clicks, you can have your food
+            delivered or ready for pickup - all without ever leaving the comfort
+            of your home. Enjoy the convenience and deliciousness of our
+            restaurant - order now
+          </p>
+        </div>
+        <div class="flex-item">
+          <br /><br />
+          <img src="image and video/new-logo-black.webp" alt="Logo" />
+          <br />
+          <h6 class="scale-text">DOORSTEP DELIVERY</h6>
+          <br />
+          <p class="small-text">
+            Corn Dawg offers doorstep delivery of your favorite menu items so
+            you can enjoy a delicious meal even when you're too busy to come in.
+            Our delivery service is fast and reliable, ensuring your order
+            arrives quickly and hot at your doorstep.
+          </p>
+        </div>
+        <div class="flex-item">
+          <br /><br />
+          <img src="image and video/new-logo-black.webp" alt="Logo" />
+          <br />
+          <h6 class="scale-text">CURBSIDE PICKUP</h6>
+          <br />
+          <p class="small-text">
+            Our curbside pickup service allows you to quickly and conveniently
+            pick up your order without having to enter the restaurant. Simply
+            place your order online or by phone and we'll have it ready for you
+            at the curb. Contactless payment is available for added safety and
+            convenience.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div>
+      <p
+        style="
+          text-align: center;
+          margin-top: -11%;
+          transform: scale(3.5) scaleX(0.8) scaleY(1);
+          font-weight: 600;
+          color: #b12b22;
+        "
+      >
+        ORIGINAL RECIPE<br />SINCE 2021<br />
+      </p>
+    </div>
+
+    <div class="image">
+      <div class="title-container">
+        <img src="image and video/star.webp" alt="star" class="star left-star" />
+        <h1 class="title-text">All Time Favourite</h1>
+        <img src="image and video/star.webp" alt="star" class="star right-star" /><br />
+      </div>
+      <div class="image-row">
+        <img src="image and video/1.webp" alt="Image 1" class="left-row-image" />
+        <img src="image and video/2.webp" alt="Image 2" class="mid-row-image" />
+        <img src="image and video/3.webp" alt="Image 3" class="right-row-image" />
+      </div>
+      <div class="name-row">
+        <p class="left-text">Tteokbokki Rice Cake NonVeg</p>
+        <p class="midle-text">TSignature Corn Dawg</p>
+        <p class="right-text">Chick & Cheese Twistdawg</p>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
