--- a/project.html
+++ b/project.html
@@ -114,22 +114,40 @@
 
     <div class="image">
       <div class="title-container">
-        <img src="image and video/star.webp" alt="star" class="star left-star" />
+        <img
+          src="image and video/star.webp"
+          alt="star"
+          class="star left-star"
+        />
         <h1 class="title-text">All Time Favourite</h1>
-        <img src="image and video/star.webp" alt="star" class="star right-star" /><br />
+        <img
+          src="image and video/star.webp"
+          alt="star"
+          class="star right-star"
+        /><br />
       </div>
       <div class="image-row">
-        <img src="image and video/1.webp" alt="Image 1" class="left-row-image" />
+        <img
+          src="image and video/1.webp"
+          alt="Image 1"
+          class="left-row-image"
+        />
         <img src="image and video/2.webp" alt="Image 2" class="mid-row-image" />
-        <img src="image and video/3.webp" alt="Image 3" class="right-row-image" />
+        <img
+          src="image and video/3.webp"
+          alt="Image 3"
+          class="right-row-image"
+        />
       </div>
       <div class="name-row">
         <p class="left-text">Tteokbokki Rice Cake NonVeg</p>
         <p class="midle-text">TSignature Corn Dawg</p>
         <p class="right-text">Chick & Cheese Twistdawg</p>
       </div>
+      <div class="full-menu">
+        <button class="Menu" onclick="goTOweb()">Full Menu</button>
+      </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
