--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           style="
             font-size: 4vw;
             font-weight: 600;
-            transform: scaleY(1.3) scaleX(1.1) translateX(3%) translateY(20%);
+            transform: scaleY(130%) scaleX(110%) translateX(3%) translateY(20%);
           "
         >
           I'm Addicted.<br />
@@ -35,7 +35,7 @@
           style="
             font-weight: 600;
             font-size: 3vw;
-            transform: scaleY(0.8) scaleX(0.7) translateY(-140%)
+            transform: scaleY(80%) scaleX(70%) translateY(-140%)
               translateX(-25%);
           "
         >
@@ -103,7 +103,7 @@
         style="
           text-align: center;
           margin-top: -11%;
-          transform: scale(3.5) scaleX(0.8) scaleY(1);
+          transform: scale(350%) scaleX(80%);
           font-weight: 600;
           color: #b12b22;
         "
