--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         autoplay
         muted
         loop
-        style="margin-top: 10%"
+        style="margin-top: 10%;width: 100%;height: auto;"
       ></video>
     </div>
     <section class="details">
