--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         <p
           class="text-1"
           style="
-            font-size: 4vw;
-            font-weight: 600;
-            transform: scaleY(130%) scaleX(110%) translateX(3%) translateY(20%);
-          "
+            font-size: 3vh;
+            font-weight: 600;"
         >
           I'm Addicted.<br />
         </p>
@@ -34,9 +32,6 @@
           class="text-2"
           style="
             font-weight: 600;
-            font-size: 3vw;
-            transform: scaleY(80%) scaleX(70%) translateY(-140%)
-              translateX(-25%);
           "
         >
           Authentic Korean Flavors.
@@ -49,7 +44,6 @@
         autoplay
         muted
         loop
-        style="margin-top: 10%;width: 100%;height: auto;"
       ></video>
     </div>
     <section class="details">
