--- a/index.html
+++ b/index.html
@@ -93,15 +93,7 @@
     </section>
 
     <div>
-      <p
-        style="
-          text-align: center;
-          margin-top: -11%;
-          transform: scale(350%) scaleX(80%);
-          font-weight: 600;
-          color: #b12b22;
-        "
-      >
+      <p id = "recipe">
         ORIGINAL RECIPE<br />SINCE 2021<br />
       </p>
     </div>
