--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
         style="text-align: left; color: red; transform: translateX(-30%)"
       >
         <p
-          class="text-1"
-          style="
-            font-size: 3vh;
-            font-weight: 600;"
-        >
+          class="text-1">
           I'm Addicted.<br />
         </p>
         <p
